--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 50b147a
-	trimbase = 
+	trim = visp_hand2eye_calibration
+	base = e5fcdbb
+	trimbase = 50b147a
 	parent = upstream
 	previous = 04bc698
