--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 27a4430
-	trimbase = 
+	trim = vision_visp
+	base = a9b0420
+	trimbase = 27a4430
 	parent = upstream
 	previous = 04bc698
