--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4e25aed
-	trimbase = 
+	trim = visp_auto_tracker
+	base = d5a51e3
+	trimbase = 4e25aed
 	parent = upstream
 	previous = 04bc698
