--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6f9f980
-	trimbase = 
+	trim = visp_tracker
+	base = 0096637
+	trimbase = 6f9f980
 	parent = upstream
 	previous = 04bc698
