--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c637ce8
-	trimbase = 
+	trim = visp_bridge
+	base = 975a4fe
+	trimbase = c637ce8
 	parent = upstream
 	previous = 04bc698
