--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5fcdbb
+	base = 55944c9
 	trimbase = 
 	parent = release/hydro/visp_hand2eye_calibration
-	previous = 
+	previous = e5fcdbb
