--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5ce9703
+	base = ab3c6e7
 	trimbase = 
 	parent = debian/hydro/visp_hand2eye_calibration
-	previous = 
+	previous = 5ce9703
