--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4dd9e1c
+	base = 6281fbf
 	trimbase = 
 	parent = release/hydro/visp_camera_calibration
-	previous = 
+	previous = 4dd9e1c
