--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e920250
+	base = 440ded4
 	trimbase = 
 	parent = debian/hydro/visp_camera_calibration
-	previous = 
+	previous = e920250
