--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d5a51e3
+	base = fd8df83
 	trimbase = 
 	parent = release/hydro/visp_auto_tracker
-	previous = 
+	previous = d5a51e3
