--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e6cf669
+	base = 00a938f
 	trimbase = 
 	parent = debian/hydro/visp_auto_tracker
-	previous = 
+	previous = e6cf669
