--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 975a4fe
+	base = 6d302fa
 	trimbase = 
 	parent = release/hydro/visp_bridge
-	previous = 
+	previous = 975a4fe
