--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14c4a54
+	base = 22045b8
 	trimbase = 
 	parent = debian/hydro/visp_bridge
-	previous = 
+	previous = 14c4a54
