--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0096637
+	base = 55d2f50
 	trimbase = 
 	parent = release/hydro/visp_tracker
-	previous = 
+	previous = 0096637
