--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c1a07e
+	base = aee0347
 	trimbase = 
 	parent = debian/hydro/visp_tracker
-	previous = 
+	previous = 3c1a07e
