--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a9b0420
+	base = 6328cd2
 	trimbase = 
 	parent = release/hydro/vision_visp
-	previous = 
+	previous = a9b0420
