--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a97460
+	base = 470b95d
 	trimbase = 
 	parent = debian/hydro/vision_visp
-	previous = 
+	previous = 1a97460
