--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6284537
-	trimbase = 
+	trim = visp_hand2eye_calibration
+	base = 929f67e
+	trimbase = 6284537
 	parent = upstream
 	previous = 03bfbb3
