--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5aa2ba1
-	trimbase = 
+	trim = vision_visp
+	base = 630b2fb
+	trimbase = 5aa2ba1
 	parent = upstream
 	previous = 03bfbb3
