--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5038ebe
-	trimbase = 
+	trim = visp_auto_tracker
+	base = c05952f
+	trimbase = 5038ebe
 	parent = upstream
 	previous = 03bfbb3
