--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9285fa0
-	trimbase = 
+	trim = visp_bridge
+	base = 292c729
+	trimbase = 9285fa0
 	parent = upstream
 	previous = 03bfbb3
