--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 630b2fb
+	base = 898d187
 	trimbase = 
 	parent = release/groovy/vision_visp
-	previous = 
+	previous = 630b2fb
