--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fd8b3c8
+	base = be387a9
 	trimbase = 
 	parent = debian/groovy/vision_visp
-	previous = 
+	previous = fd8b3c8
