--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 929f67e
+	base = 15a92dd
 	trimbase = 
 	parent = release/groovy/visp_hand2eye_calibration
-	previous = 
+	previous = 929f67e
