--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fdd4b70
+	base = 2ccee9e
 	trimbase = 
 	parent = debian/groovy/visp_hand2eye_calibration
-	previous = 
+	previous = fdd4b70
