--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 292c729
+	base = 72f6345
 	trimbase = 
 	parent = release/groovy/visp_bridge
-	previous = 
+	previous = 292c729
