--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b17dfa9
+	base = 4c084a9
 	trimbase = 
 	parent = debian/groovy/visp_bridge
-	previous = 
+	previous = b17dfa9
