--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 983e7f2
+	base = 235e5f6
 	trimbase = 
 	parent = release/groovy/visp_camera_calibration
-	previous = 
+	previous = 983e7f2
