--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c663eb2
+	base = 44dbaaa
 	trimbase = 
 	parent = debian/groovy/visp_camera_calibration
-	previous = 
+	previous = c663eb2
