--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c05952f
+	base = 119eb45
 	trimbase = 
 	parent = release/groovy/visp_auto_tracker
-	previous = 
+	previous = c05952f
