--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83dc8b4
+	base = 10fc96f
 	trimbase = 
 	parent = debian/groovy/visp_auto_tracker
-	previous = 
+	previous = 83dc8b4
