--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a07d8c8
+	base = cebe7ad
 	trimbase = 
 	parent = release/groovy/visp_tracker
-	previous = 
+	previous = a07d8c8
