--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 914b38f
+	base = 250d614
 	trimbase = 
 	parent = debian/groovy/visp_tracker
-	previous = 
+	previous = 914b38f
