--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = 983e7f2
-	trimbase = 2e5262e
+	trimbase = 
 	parent = upstream
 	previous = 03bfbb3
