--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = c8cee81
-	trimbase = 
+	base = 90e4553
+	trimbase = c8cee81
 	parent = upstream
 	previous = 03bfbb3
