--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = 929f67e
-	trimbase = 6284537
+	trimbase = 
 	parent = upstream
 	previous = 03bfbb3
