--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = b0bd406
-	trimbase = 
+	base = e893fcd
+	trimbase = b0bd406
 	parent = upstream
 	previous = 03bfbb3
