--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 08e8896
-	trimbase = 
+	base = e79c9e9
+	trimbase = 08e8896
 	parent = upstream
 	previous = 03bfbb3
