--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 1d2e069
-	trimbase = 
+	base = eab167f
+	trimbase = 1d2e069
 	parent = upstream
 	previous = 03bfbb3
