--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = bb17605
-	trimbase = 
+	base = 1902087
+	trimbase = bb17605
 	parent = upstream
 	previous = 03bfbb3
