Imported upstream version '0.7.1' of 'upstream'

--- a/visp_bridge/CMakeLists.txt
+++ b/visp_bridge/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(visp_bridge)
 
-# By default set RelWithDebInfo configuration
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE String "Choose the type of build, options are: None Debug Release" FORCE)
-endif()
-
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   roscpp
@@ -41,6 +36,7 @@ catkin_package(
 include_directories(
   include
   ${VISP_INCLUDE_DIRS}
+  ${catkin_INCLUDE_DIRS}
 )
 
 # Add package definitions
