--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = 48b0ea6
-	trimbase = 
+	base = 668289d
+	trimbase = 48b0ea6
 	parent = upstream
 	previous = 6da1f3e
