--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = 248fd7d
-	trimbase = 6b91720
+	trimbase = 
 	parent = upstream
 	previous = 03bfbb3
