--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 4510990
-	trimbase = 
+	base = f323f05
+	trimbase = 4510990
 	parent = upstream
 	previous = 6da1f3e
