--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = aee9146
-	trimbase = 
+	base = f09d777
+	trimbase = aee9146
 	parent = upstream
 	previous = 6da1f3e
