--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = bb420dd
-	trimbase = 
+	base = c334df6
+	trimbase = bb420dd
 	parent = upstream
 	previous = 6da1f3e
