--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = c742bf0
-	trimbase = 
+	base = bdf5daa
+	trimbase = c742bf0
 	parent = upstream
 	previous = 22e99fd
