--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = 4dd9e1c
-	trimbase = 9c71afc
+	trimbase = 
 	parent = upstream
 	previous = 04bc698
