--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = a8f6b85
-	trimbase = 
+	base = 95ab2ed
+	trimbase = a8f6b85
 	parent = upstream
 	previous = 22e99fd
