--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 80b56e7
-	trimbase = 
+	base = b8d156c
+	trimbase = 80b56e7
 	parent = upstream
 	previous = 22e99fd
