--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = d0bbfee
-	trimbase = 
+	base = ae4c80c
+	trimbase = d0bbfee
 	parent = upstream
 	previous = 22e99fd
