--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 38207d9
-	trimbase = 
+	base = fc0d305
+	trimbase = 38207d9
 	parent = upstream
 	previous = 22e99fd
