--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = cd2e2f5
-	trimbase = 
+	base = 39b0539
+	trimbase = cd2e2f5
 	parent = upstream
 	previous = 22e99fd
