--- a/visp_camera_calibration/CMakeLists.txt
+++ b/visp_camera_calibration/CMakeLists.txt
@@ -2,35 +2,44 @@ cmake_minimum_required(VERSION 2.8.3)
 project(visp_camera_calibration)
 
 find_package(catkin REQUIRED COMPONENTS
-  visp_bridge
-  message_generation
   camera_calibration_parsers
+  geometry_msgs
+  message_generation
+  roscpp
   sensor_msgs
   std_msgs
-  geometry_msgs
+  visp_bridge
 )
 
-# TO FIX, VISP_DEFINITIONS should come from visp_bridge dependency
 find_package(VISP REQUIRED)
 add_definitions(${VISP_DEFINITIONS})
 
-
-include_directories(
+include_directories(SYSTEM
+  ${BULLET_INCLUDE_DIRS}
+  ${Boost_INCLUDE_DIRS}
+  ${VISP_INCLUDE_DIRS}
   ${catkin_INCLUDE_DIRS}
-)
+  )
+link_directories(
+  ${BULLET_LIBRARY_DIRS}
+  ${Boost_LIBRARY_DIRS}
+  ${VISP_LIBRARY_DIRS}
+  ${catkin_LIBRARY_DIRS}
+  )
+
 
 # Generate messages and services.
 add_message_files(
-  DIRECTORY 
+  DIRECTORY
     msg
   FILES
     CalibPointArray.msg
     CalibPoint.msg
-    ImageAndPoints.msg  
+    ImageAndPoints.msg
     ImagePoint.msg
   )
 add_service_files(
-  DIRECTORY 
+  DIRECTORY
     srv
   FILES
     calibrate.srv
@@ -43,30 +52,55 @@ catkin_package(
     sensor_msgs
     std_msgs
     geometry_msgs
+  DEPENDS
+    VISP
 )
 
 add_library(visp_camera_calibration_common src/names.cpp src/names.h)
+target_link_libraries(visp_camera_calibration_common
+  ${catkin_LIBRARIES}
+  ${roscpp_LIBRARIES}
+  )
+
 
 add_executable(visp_camera_calibration_calibrator
   src/calibrator.cpp
   src/calibrator.h
   src/calibrator_main.cpp)
-target_link_libraries(visp_camera_calibration_calibrator visp_camera_calibration_common ${catkin_LIBRARIES})
-add_dependencies(visp_camera_calibration_calibrator ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
+target_link_libraries(visp_camera_calibration_calibrator
+  visp_camera_calibration_common
+  ${catkin_LIBRARIES}
+  ${roscpp_LIBRARIES}
+  ${VISP_LIBRARIES})
+add_dependencies(visp_camera_calibration_calibrator
+  ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
 
 add_executable(visp_camera_calibration_image_processing
   src/image_processing.cpp
   src/image_processing.h
   src/image_processing_main.cpp)
-target_link_libraries(visp_camera_calibration_image_processing visp_camera_calibration_common ${catkin_LIBRARIES})
-add_dependencies(visp_camera_calibration_image_processing ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
+target_link_libraries(visp_camera_calibration_image_processing
+  visp_camera_calibration_common
+  ${catkin_LIBRARIES}
+  ${roscpp_LIBRARIES}
+  ${VISP_LIBRARIES}
+  )
+add_dependencies(visp_camera_calibration_image_processing
+  ${catkin_EXPORTED_TARGETS}
+  ${PROJECT_NAME}_gencpp
+  ${VISP_LIBRARIES})
 
 add_executable(visp_camera_calibration_camera
   src/camera.cpp
   src/camera.h
   src/camera_main.cpp)
-target_link_libraries(visp_camera_calibration_camera visp_camera_calibration_common ${catkin_LIBRARIES})
-add_dependencies(visp_camera_calibration_camera ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
+target_link_libraries(visp_camera_calibration_camera
+  visp_camera_calibration_common
+  ${catkin_LIBRARIES}
+  ${roscpp_LIBRARIES}
+  ${VISP_LIBRARIES})
+add_dependencies(visp_camera_calibration_camera
+  ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
 
 install(
   TARGETS
