--- a/visp_hand2eye_calibration/CMakeLists.txt
+++ b/visp_hand2eye_calibration/CMakeLists.txt
@@ -2,31 +2,42 @@ cmake_minimum_required(VERSION 2.8.3)
 project(visp_hand2eye_calibration)
 
 find_package(catkin REQUIRED COMPONENTS
-  visp_bridge
-  message_generation
+  geometry_msgs
   image_proc
+  message_generation
+  roscpp
   sensor_msgs
   std_msgs
-  geometry_msgs
+  visp_bridge
 )
 
-# TO FIX, VISP_DEFINITIONS should come from visp_bridge dependency
+# ViSP cannot be found by Catkin.
+# see https://github.com/ros/catkin/issues/606
 find_package(VISP REQUIRED)
+
+
 add_definitions(${VISP_DEFINITIONS})
 
 include_directories(
+  ${Boost_INCLUDE_DIRS}
+  ${VISP_INCLUDE_DIRS}
   ${catkin_INCLUDE_DIRS}
 )
+link_directories(
+  ${Boost_LIBRARY_DIRS}
+  ${VISP_LIBRARY_DIRS}
+  ${catkin_LIBRARY_DIRS}
+  )
 
 # Generate messages and services.
 add_message_files(
-  DIRECTORY 
+  DIRECTORY
     msg
   FILES
     TransformArray.msg
   )
 add_service_files(
-  DIRECTORY 
+  DIRECTORY
     srv
   FILES
     compute_effector_camera.srv
@@ -43,26 +54,42 @@ catkin_package(
     geometry_msgs
 )
 
-add_library(visp_hand2eye_calibration_common 
+add_library(visp_hand2eye_calibration_common
   src/names.cpp
   src/names.h
 )
+target_link_libraries(visp_hand2eye_calibration_common
+  ${catkin_LIBRARIES}
+  ${roscpp_LIBRARIES}
+  )
 
-add_executable(visp_hand2eye_calibration_calibrator 
-  src/calibrator.cpp 
-  src/calibrator.h 
+add_executable(visp_hand2eye_calibration_calibrator
+  src/calibrator.cpp
+  src/calibrator.h
   src/calibrator_main.cpp
 )
-target_link_libraries(visp_hand2eye_calibration_calibrator visp_hand2eye_calibration_common ${catkin_LIBRARIES})
-add_dependencies(visp_hand2eye_calibration_calibrator ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
+target_link_libraries(visp_hand2eye_calibration_calibrator
+  visp_hand2eye_calibration_common
+  ${catkin_LIBRARIES}
+  ${roscpp_LIBRARIES}
+  )
+add_dependencies(visp_hand2eye_calibration_calibrator
+  ${catkin_EXPORTED_TARGETS}
+  ${PROJECT_NAME}_gencpp)
 
-add_executable(visp_hand2eye_calibration_client 
-  src/client.cpp 
-  src/client.h 
+add_executable(visp_hand2eye_calibration_client
+  src/client.cpp
+  src/client.h
   src/client_main.cpp
 )
-target_link_libraries(visp_hand2eye_calibration_client visp_hand2eye_calibration_common ${catkin_LIBRARIES})
-add_dependencies(visp_hand2eye_calibration_client ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
+target_link_libraries(visp_hand2eye_calibration_client
+  visp_hand2eye_calibration_common
+  ${catkin_LIBRARIES}
+  ${roscpp_LIBRARIES}
+  )
+add_dependencies(visp_hand2eye_calibration_client
+  ${catkin_EXPORTED_TARGETS}
+  ${PROJECT_NAME}_gencpp)
 
 install(
   TARGETS
