--- a/visp_bridge/package.xml
+++ b/visp_bridge/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>visp_bridge</name>
-  <version>0.7.1</version>
+  <version>0.7.2</version>
   <description>
     Converts between ROS structures and ViSP structures.
   </description>
@@ -12,16 +12,17 @@
   <license>GPLv2</license>
 
   <url>http://ros.org/wiki/visp_bridge</url>
- 
+
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
- 
+  <build_depend>visp</build_depend>
+
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-
+  <run_depend>visp</run_depend>
 </package>
