--- a/visp_tracker/package.xml
+++ b/visp_tracker/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>visp_tracker</name>
-  <version>0.7.1</version>
+  <version>0.7.2</version>
   <description>
     Wraps the ViSP moving edge tracker provided by the ViSP visual
     servoing library into a ROS package.
@@ -21,6 +21,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>bullet</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>nodelet</build_depend>
@@ -33,7 +34,9 @@
   <build_depend>image_transport</build_depend>
   <build_depend>resource_retriever</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>visp</build_depend>
 
+  <run_depend>bullet</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
@@ -47,4 +50,5 @@
   <run_depend>image_transport</run_depend>
   <run_depend>resource_retriever</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>visp</run_depend>
 </package>
