--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = bdf5daa
-	trimbase = c742bf0
+	trimbase = 
 	parent = upstream
 	previous = 22e99fd
