--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = c88ffb0
-	trimbase = 
+	base = 5365c71
+	trimbase = c88ffb0
 	parent = upstream
 	previous = 84f8880
