--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = 50fbe7f
-	trimbase = 
+	base = aed156a
+	trimbase = 50fbe7f
 	parent = upstream
 	previous = 84f8880
