--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 88d1d52
-	trimbase = 
+	base = d16ce0f
+	trimbase = 88d1d52
 	parent = upstream
 	previous = 84f8880
