--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = e68e0e3
-	trimbase = 
+	base = d0dca13
+	trimbase = e68e0e3
 	parent = upstream
 	previous = 84f8880
