--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = bef78e3
-	trimbase = 
+	base = bc518f9
+	trimbase = bef78e3
 	parent = upstream
 	previous = 84f8880
