--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 80e8416
-	trimbase = 
+	base = 7ea93db
+	trimbase = 80e8416
 	parent = upstream
 	previous = 84f8880
