--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = c25a08d
-	trimbase = 
+	base = 2c0f9bb
+	trimbase = c25a08d
 	parent = upstream
 	previous = 07dc220
