--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = 04efe81
-	trimbase = c7d9d74
+	trimbase = 
 	parent = upstream
 	previous = 6da1f3e
