--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = 828aa87
-	trimbase = 
+	base = 4b17934
+	trimbase = 828aa87
 	parent = upstream
 	previous = 07dc220
