--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = a903358
-	trimbase = 
+	base = 562c00b
+	trimbase = a903358
 	parent = upstream
 	previous = 07dc220
