--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 56b2154
-	trimbase = 
+	base = 8bc28d7
+	trimbase = 56b2154
 	parent = upstream
 	previous = 07dc220
