--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = fe8bf89
-	trimbase = 
+	base = 09ec97a
+	trimbase = fe8bf89
 	parent = upstream
 	previous = 07dc220
