--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 855d168
-	trimbase = 
+	base = ffe28ab
+	trimbase = 855d168
 	parent = upstream
 	previous = 07dc220
