--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>visp_tracker</name>
-  <version>0.7.1</version>
+  <version>0.7.2</version>
   <description>
     Wraps the ViSP moving edge tracker provided by the ViSP visual
     servoing library into a ROS package.
@@ -33,6 +33,7 @@
   <build_depend>image_transport</build_depend>
   <build_depend>resource_retriever</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>visp</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>message_generation</run_depend>
@@ -47,4 +48,5 @@
   <run_depend>image_transport</run_depend>
   <run_depend>resource_retriever</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>visp</run_depend>
 </package>
