--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
 	base = 2c0f9bb
-	trimbase = c25a08d
+	trimbase = 
 	parent = upstream
 	previous = 07dc220
