--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = 8c09cf9
-	trimbase = 
+	base = 0cc9461
+	trimbase = 8c09cf9
 	parent = upstream
 	previous = 8349765
