--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = 4b17934
-	trimbase = 828aa87
+	trimbase = 
 	parent = upstream
 	previous = 07dc220
