--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = ffaa4c9
-	trimbase = 
+	base = 73a0592
+	trimbase = ffaa4c9
 	parent = upstream
 	previous = 8349765
