--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 05e51ba
-	trimbase = 
+	base = ae9f626
+	trimbase = 05e51ba
 	parent = upstream
 	previous = 8349765
