--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = 1cdf7c7
-	trimbase = 
+	base = 308fc67
+	trimbase = 1cdf7c7
 	parent = upstream
 	previous = 8349765
