--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = 1c08132
-	trimbase = 
+	base = b437277
+	trimbase = 1c08132
 	parent = upstream
 	previous = 8349765
