--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c195453
-	trimbase = 
+	trim = visp_camera_calibration
+	base = fd15cf3
+	trimbase = c195453
 	parent = upstream
 	previous = 7e4d10e
