--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 07d0efd
-	trimbase = 
+	trim = visp_hand2eye_calibration
+	base = ab1f4ad
+	trimbase = 07d0efd
 	parent = upstream
 	previous = 7e4d10e
