--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0e1f6d7
-	trimbase = 
+	trim = vision_visp
+	base = be0c02a
+	trimbase = 0e1f6d7
 	parent = upstream
 	previous = 7e4d10e
