--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fbdeb76
-	trimbase = 
+	trim = visp_auto_tracker
+	base = 9320bd8
+	trimbase = fbdeb76
 	parent = upstream
 	previous = 7e4d10e
