--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 162ec8b
-	trimbase = 
+	trim = visp_tracker
+	base = e3df53c
+	trimbase = 162ec8b
 	parent = upstream
 	previous = 7e4d10e
