--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2395156
-	trimbase = 
+	trim = visp_bridge
+	base = c2918ca
+	trimbase = 2395156
 	parent = upstream
 	previous = 7e4d10e
