--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9320bd8
+	base = f465094
 	trimbase = 
 	parent = release/indigo/visp_auto_tracker
-	previous = 
+	previous = 9320bd8
