--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e0cf117
+	base = abb7a50
 	trimbase = 
 	parent = debian/indigo/visp_auto_tracker
-	previous = 
+	previous = e0cf117
