--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ab1f4ad
+	base = a5dd2b5
 	trimbase = 
 	parent = release/indigo/visp_hand2eye_calibration
-	previous = 
+	previous = ab1f4ad
