--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 61edc82
+	base = c66c2d8
 	trimbase = 
 	parent = debian/indigo/visp_hand2eye_calibration
-	previous = 
+	previous = 61edc82
