--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c2918ca
+	base = ab548e4
 	trimbase = 
 	parent = release/indigo/visp_bridge
-	previous = 
+	previous = c2918ca
