--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 360d261
+	base = 1f2e9a2
 	trimbase = 
 	parent = debian/indigo/visp_bridge
-	previous = 
+	previous = 360d261
