--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fd15cf3
+	base = ab25d02
 	trimbase = 
 	parent = release/indigo/visp_camera_calibration
-	previous = 
+	previous = fd15cf3
