--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d1e3e0d
+	base = b47df91
 	trimbase = 
 	parent = debian/indigo/visp_camera_calibration
-	previous = 
+	previous = d1e3e0d
