--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e3df53c
+	base = bb5e2d8
 	trimbase = 
 	parent = release/indigo/visp_tracker
-	previous = 
+	previous = e3df53c
