--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91f53d5
+	base = bb4aeef
 	trimbase = 
 	parent = debian/indigo/visp_tracker
-	previous = 
+	previous = 91f53d5
