--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = be0c02a
+	base = 9d2a127
 	trimbase = 
 	parent = release/indigo/vision_visp
-	previous = 
+	previous = be0c02a
