--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 19dc126
+	base = 4906f3f
 	trimbase = 
 	parent = debian/indigo/vision_visp
-	previous = 
+	previous = 19dc126
