Imported upstream version '0.7.3' of 'upstream'

--- a/visp_auto_tracker/CMakeLists.txt
+++ b/visp_auto_tracker/CMakeLists.txt
@@ -143,6 +143,10 @@ install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+install(DIRECTORY models
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
 #############
 # Bag files #
 #############
