--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 34af90c
-	trimbase = 
+	base = 0a9df96
+	trimbase = 34af90c
 	parent = upstream
 	previous = 0983088
