--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = e9e5dd8
-	trimbase = 
+	base = eb743b9
+	trimbase = e9e5dd8
 	parent = upstream
 	previous = 0983088
