--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_tracker
-	base = c42bb96
-	trimbase = 
+	base = 4def13d
+	trimbase = c42bb96
 	parent = upstream
 	previous = 0983088
