--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_bridge
-	base = f9b9456
-	trimbase = 
+	base = b4d1378
+	trimbase = f9b9456
 	parent = upstream
 	previous = 0983088
