--- a/visp_tracker/package.xml
+++ b/visp_tracker/package.xml
@@ -21,6 +21,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>bullet</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>nodelet</build_depend>
@@ -35,6 +36,7 @@
   <build_depend>tf</build_depend>
   <build_depend>visp</build_depend>
 
+  <run_depend>bullet</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
