--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_camera_calibration
-	base = 3fe55b4
-	trimbase = 
+	base = a63b5ed
+	trimbase = 3fe55b4
 	parent = upstream
 	previous = bb9e668
