--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
 	base = aed156a
-	trimbase = 50fbe7f
+	trimbase = 
 	parent = upstream
 	previous = 84f8880
