--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_hand2eye_calibration
-	base = 8274999
-	trimbase = 
+	base = 83108bb
+	trimbase = 8274999
 	parent = upstream
 	previous = bb9e668
