--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_visp
-	base = 2e57ca7
-	trimbase = 
+	base = bd505a7
+	trimbase = 2e57ca7
 	parent = upstream
 	previous = bb9e668
