--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visp_auto_tracker
-	base = 26909ac
-	trimbase = 
+	base = 63b395f
+	trimbase = 26909ac
 	parent = upstream
 	previous = bb9e668
